# fungalphylo

./: .gitignore  CLAUDE.md  CODEX.md  README.md  pyproject.toml
agent_context/: CODEX.md  project_live.md  project_master.md  restart_contract.md
docs/: restart_contract.md
src/fungalphylo/cli/: main.py
src/fungalphylo/cli/commands/: autoselect.py  busco.py  busco_slurm.py  db.py  download.py  fetch_index.py  idmap.py  ingest.py  init.py  interproscan_slurm.py  orthofinder_slurm.py  restore.py  review.py  stage.py  status.py  taxonomy.py
src/fungalphylo/cli/commands/protsetphylo/: __init__.py  align.py  build_fasta.py  init_family.py  interproscan.py  select.py  tree.py
src/fungalphylo/core/: busco.py  config.py  domain_arch.py  download.py  errors.py  events.py  fasta.py  hash.py  idmap.py  ids.py  ipr_tsv.py  jgi_auth.py  manifest.py  markers.py  paths.py  resolve.py  slurm.py  stage.py  tabular.py  tools.py  validate.py
src/fungalphylo/db/: db.py  queries.py  schema.sql
tests/: mycocosm.xlsx  mycocosm_debug.xlsx  ncbi_taxid_VG_20260302.tsv  test_autoselect.py  test_busco_slurm.py  test_core_utils.py  test_db_command.py  test_domain_arch.py  test_e2e_intake.py  test_fetch_index_cache.py  test_interproscan_slurm.py  test_ipr_tsv.py  test_orthofinder_slurm.py  test_protsetphylo_align.py  test_protsetphylo_build_fasta.py  test_protsetphylo_init.py  test_protsetphylo_select.py  test_protsetphylo_tree.py  test_restart_contract.py  test_restore_download.py  test_stage_snapshots.py  test_status_failures.py  test_taxonomy.py
